# semantic-reader-backend

./: .env.example  .gitignore  =2.0.0  Dockerfile  Makefile  QUICKSTART.md  README.md  REFACTORING.md  alembic.ini  app.py  isolated_test_report.py  package-lock.json  package.json  pyproject.toml  rtl_comparison.json  run_all_tests.py  run_server.sh  run_tests.sh  simple_test_report.py  simple_test_service.py  simple_test_service_mock.py  simple_test_visualizations.py
.cursor/rules/: docling_patterns.mdc  fastapi_patterns.mdc  python_standards.mdc
app/: README.md  __init__.py  config.py  main.py  models.py  pipelines.py
app/api/: __init__.py  convert.py  deps.py  health.py  recipe.py
app/core/: __init__.py  config.py  database.py  exceptions.py
app/dependencies/: __init__.py  database.py  services.py
app/models/: __init__.py  base.py  document.py
app/reporting/: __init__.py  html_generator.py  routes.py  service.py  visualizations.py
app/schemas/: __init__.py  base.py  convert.py  document_entities.py  documents.py  health.py
app/services/: __init__.py  analysis_service.py  base.py  document_processing_service.py  pipeline_service.py
app/utils/: __init__.py  logging.py
docs/: migration-guide.md  setup_uv.sh  uv_guide.md  uv_migration.md  uv_quickstart.md
examples/: api_service_example.py  converter_example.py  gateway_example.py  recipe_example.py  visualize_pdf_example.py
scripts/: README.md  compare_pdfs.py  demo_refactored.py  extract_pdf_text.py  visualize_pdf.py
scripts/ci/: run_tests.sh
scripts/dev/: migrate_to_uv.sh  quality_check.sh  run_app.sh  run_server.sh  setup_dev.sh
scripts/task-master/: clean_refactor_prd.md  prd.md  prd.txt  refactor_prd.md  refactor_prd.txt  refactor_prd_part_2.md  resting_plan.md  task-complexity-report.json
scripts/tests/: run_tests.sh  test_api.py  test_converter.py  test_docling_installation.py
scripts/utils/: __init__.py  analyze_conversions.py
src/: __init__.py
src/papermage_docling/: LICENSE  README.md  __init__.py  adapters.py  api_service.py  converter.py  pyproject.toml  recipe.py
src/papermage_docling/analysis/: __init__.py  document_conversion_map.py
src/papermage_docling/api/: __init__.py  base.py  gateway.py  papermage.py  recipe_api.py  server.py
src/papermage_docling/api/adapters/: __init__.py  base.py  factory.py  pdf.py
src/papermage_docling/cli/: __init__.py  converter_cli.py
src/papermage_docling/converters/: __init__.py  docling_to_papermage_converter.py  document.py
src/papermage_docling/docs/images/: architecture.txt
src/papermage_docling/parsers/: __init__.py  docling_pdf_parser.py
src/papermage_docling/pipeline/: __init__.py  pipeline.py  simple_pipeline.py
src/papermage_docling/predictors/: __init__.py  base.py  figure.py  figure_predictor.py  language.py  language_predictor.py  layout.py  rtl_utils.py  structure.py  structure_predictor.py  table.py  table_predictor.py
src/papermage_docling/rasterizers/: __init__.py  pdf_rasterizer.py
src/papermage_docling/storage/: __init__.py  cache.py  file_storage.py  interface.py
src/papermage_docling/tests/: __init__.py  test_end_to_end.py
src/papermage_docling/tests/test_converters/: __init__.py  test_docling_to_papermage_converter.py
src/papermage_docling/visualizers/: __init__.py  comparison_visualizer.py  docling_visual.py  pdf_visualizer.py  report_generator.py
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  tasks.json.bak
test_results/: 36718-10-20.pdf_analysis.json  36718-10-20.pdf_page_1_v2.json  36718-10-20.pdf_page_2_v2.json  36718-10-20.pdf_page_3_v2.json  36718-10-20.pdf_page_4_v2.json  36718-10-20.pdf_v2_parser_output.json  36718-10-20.pdf_v2_summary.json  rtl_test_direct_output.json  rtl_test_output.json
test_results/html/: e2e_test_report_20250414_152243.html  e2e_test_report_20250414_152251.html  e2e_test_report_20250414_173237.html  e2e_test_report_20250414_173248.html  e2e_test_report_20250414_173652.html  e2e_test_report_20250414_173730.html  e2e_test_report_20250414_173757.html  e2e_test_report_20250414_174324.html  e2e_test_report_20250414_174331.html  e2e_test_report_20250414_174953.html  e2e_test_report_20250414_175001.html  e2e_test_report_20250414_175009.html  e2e_test_report_20250414_175022.html  e2e_test_report_20250414_175031.html  e2e_test_report_20250414_203556.html  e2e_test_report_20250414_203603.html  e2e_test_report_20250414_203801.html  e2e_test_report_20250414_203809.html  e2e_test_report_20250414_205653.html  e2e_test_report_20250414_210422.html  e2e_test_report_20250415_010655.html  e2e_test_report_20250415_011033.html  e2e_test_report_20250415_011048.html  e2e_test_report_20250415_011101.html  e2e_test_report_20250415_011125.html  e2e_test_report_20250415_011158.html  e2e_test_report_20250415_011210.html  e2e_test_report_20250415_011511.html  e2e_test_report_20250415_011547.html  e2e_test_report_20250415_011640.html  e2e_test_report_20250415_011713.html  e2e_test_report_20250415_011724.html  e2e_test_report_20250415_011747.html  e2e_test_report_20250415_011757.html  e2e_test_report_20250415_011807.html  e2e_test_report_20250415_012618.html  e2e_test_report_20250415_012930.html  e2e_test_report_20250416_132346.html  e2e_test_report_20250419_202256.html  e2e_test_report_20250419_203218.html  (+1 more)
tests/: README.md  conftest.py  e2e_test_config.json  requirements-test.txt  test_document_comparison.py  test_end_to_end.md  test_end_to_end.py  test_predictors.py  test_visualizations.py  update_expected_outputs.py
tests/api/: test_document_api.py  test_document_endpoints.py  test_routes.py
tests/converter/: test_converter_module.py  test_edge_cases.py  test_full_conversion.py  test_schema_validation.py
tests/data/: README.md  download_samples.py  generate_expected_outputs.py  generate_synthetic_outputs.py
tests/error_handling/: test_edge_cases.py
tests/figures/: test_detection.py
(+88 files in other folders)
