[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papermage-docling"
version = "0.1.0"
description = "Document parsing system using Docling with PaperMage compatibility"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "docling-core",
    "docling",
    "docling-parse",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart",
    "PyMuPDF>=1.21.0",
    "gradio>=3.50.0",
    "slowapi>=0.1.7",
    "uuid>=1.30",
    "fasttext>=0.9.2",
]

[project.scripts]
papermage-converter = "papermage_docling.cli.converter_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.2.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.0.270",
    "black>=23.1.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.2.0",
    "pytest-benchmark>=4.0.0",
]
lint = [
    "ruff>=0.0.270",
    "black>=23.1.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
all = [
    "papermage-docling[dev,test,lint,docs]",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/papermage-docling"
"Bug Tracker" = "https://github.com/yourusername/papermage-docling/issues"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "simple: tests using simple documents",
    "complex: tests using complex documents with multiple columns, tables, etc.",
    "rtl: tests for right-to-left text handling",
    "large: tests for large documents (performance)",
    "performance: tests measuring performance metrics"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.setuptools]
packages = ["papermage_docling"]
package-dir = {"" = "src"}
