[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papermage-docling"
version = "0.1.0"
description = "Document parsing system using Docling with PaperMage compatibility"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core dependencies
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    # API utilities
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    # Document processing
    "docling>=2.0.0",
    "PyMuPDF>=1.21.0",
    "gradio>=3.50.0",
    "fasttext>=0.9.2",
    # Rate limiting
    "slowapi>=0.1.7",
    "langdetect>=1.0.9",
    "python-bidi>=0.6.6",
    "arabic-reshaper>=3.0.0",
    "docling-ibm-models>=3.4.1",
    "pytest-html>=4.1.1",
    "aiohttp>=3.11.16",
]

[project.scripts]
papermage-converter = "papermage_docling.cli.converter_cli:main"
semantic-reader = "app.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.2.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.0.270",
    "black>=23.1.0",
    "mypy>=1.0.0",
    "httpx>=0.24.0",  # For API testing
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.2.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.24.0",
]
lint = [
    "ruff>=0.0.270",
    "black>=23.1.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
all = [
    "papermage-docling[dev,test,lint,docs]",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/papermage-docling"
"Bug Tracker" = "https://github.com/yourusername/papermage-docling/issues"
"Documentation" = "https://github.com/yourusername/papermage-docling/docs"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = []
# Include app package in ruff checks
src = ["app", "src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "simple: tests using simple documents",
    "complex: tests using complex documents with multiple columns, tables, etc.",
    "rtl: tests for right-to-left text handling",
    "large: tests for large documents (performance)",
    "performance: tests measuring performance metrics",
    "api: tests for API endpoints",
    "unit: unit tests for specific components",
    "integration: integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
# Include app package in mypy checks
packages = ["app", "src"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.setuptools]
packages = ["papermage_docling", "app"]
package-dir = {"" = "src", "app" = "app"}
