[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papermage-docling"
version = "0.1.0"
description = "Document parsing system using Docling with PaperMage compatibility"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "docling-core",
    "docling",
    "docling-parse",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "python-multipart",
    "PyMuPDF>=1.21.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.270",
    "black>=23.1.0",
    "mypy>=1.0.0",
]

# FastText is added as an optional dependency since it requires C++ compilation
rtl = [
    "fasttext>=0.9.2",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/papermage-docling"
"Bug Tracker" = "https://github.com/yourusername/papermage-docling/issues"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
